# ai_template_docker

./: .editorconfig  .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
notebooks/: test.ipynb
