[project]
name = "ai-template"
version = "0.1.0"
description = "Reusable AI/Kaggle research environment"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "polars",
    "matplotlib",
    "scipy",
    "jupyterlab>=4.6.1",
    "ipykernel>=7.3.0",
    "scikit-learn>=1.9.0",
    "lightgbm>=4.6.0",
    "xgboost>=3.3.0",
    "kaggle==1.6.17",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
